feat(preview): 实现预览系统协议化重构
- 引入PreviewPayload协议层，支持BLOCKS、POINTS、CURVES等多种预览类型
- 创建PreviewRequest统一请求接口，整合payload、style和backend参数
- 实现PreviewStyle样式系统，分离预览内容与表现形式
- 添加PreviewPayloadAdapters适配器，兼容旧版GhostBlockPlacement数据结构
- 重构GeometryViewerNode使用新的预览协议，移除旧的tracked和ghost预览方法
- 更新PreviewManager为统一入口，支持GHOST和TRACKED_WORLD后端
- 新增多个预览载荷类型：PreviewBlock、PreviewPoint、PreviewVector等
- 优化GhostBlockElement支持PreviewBlocksPayload输入数据类型